# telegram-bot-template

./: .gitignore  README.md  pyproject.toml
telegram_bot_template/: bot.py  constants.py
telegram_bot_template/cli/: __init__.py
telegram_bot_template/extensions/commands/: README.md
