[tool.poetry]
name = "telegram_bot_template"
version = "0.1.0"
description = "A Telegram bot template"
authors = ["Your Name <you@example.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.scripts]
bot = 'telegram_bot_template.cli:main'

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^13.4.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
